[package]
name = "cycle9"
version = "0.1.0"
authors = ["Dalton Ellis <dalton.ellis@trojans.dsu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
windows = "0.10.0"
structopt = "0.3"
futures = "0.3.15"
serde = { version="1.0.126", features= ["derive"] }


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
